# PhaseNet-beamforming

./: .gitignore  README.md
bf_implementation/: pyproject.toml
bf_notebook/: generate_test_dataset.ipynb  pyproject.toml
bf_visualize/: .gitignore  README.md  pylintrc  pyproject.toml
bf_visualize/data/: arrival_info_by_ziyi_20220921_add_sta_info.csv
bf_visualize/src/: land_sea.cpt  plot_event_depth_distribution.py  plot_event_distribution.py  plot_p_aligned_by_p.py  plot_rank_by_index.py
bf_visualize/src/utils/: load_data.py  process_waveform.py
visualize/: pyproject.toml
