[tool.poetry]
name = "visualize"
version = "0.1.0"
description = ""
authors = ["ziyi xi <ziyixi@mail.ustc.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pygmt = "^0.7.0"
pandas = "^1.5.0"
numpy = "^1.23.3"
scipy = "^1.9.1"
obspy = "^1.3.0"
tqdm = "^4.64.1"
pyasdf = "^0.7.5"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
